added dic container

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="quote-container" id="quote-container">
+        
+    </div>
 
 <script src="script.js" ></script>
 </body>
