added a div which includes the quote icon via the < i>  element and a quote using <span> so it only takes up as much space as needed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 <body>
     <div class="quote-container" id="quote-container">
-        
+        <!-- Quote Element -->
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span class="quote">What you are is what you have been. What you'll be is what you do now</span>
+        </div>
     </div>
 
 <script src="script.js" ></script>
