--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" type="image/png"  href="https://www.google.com/s2/favicons?domain=jacinto.design">
 
-    <link rel="stylesheet" href="https://cdnjs.com/libraries/font-awesome/5.12.0-2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,6 +19,21 @@
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
             <span class="quote">What you are is what you have been. What you'll be is what you do now</span>
+            
+        </div>
+        <!-- Author -->
+        <div class="quote-author">
+            <span id="author">Buddha</span>
+        </div>
+        <!-- Buttons -->
+        <div class="button-container">
+
+            <button class="twitter-button" id="twitter" title="Tweet This!">
+                <i class="fab fa-twitter"></i>
+            </button>
+
+            <button id="new-quote">Now Quote</button>
+
         </div>
     </div>
 
