--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Quote Element -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span class="quote"></span>
+            <span id="quote"></span>
             
         </div>
         <!-- Author -->
