added event listener to new qote button so user has another way of getting a new quote

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <i class="fab fa-twitter"></i>
             </button>
 
-            <button id="new-quote">Now Quote</button>
+            <button id="new-quote">New Quote</button>
 
         </div>
     </div>
